@@ -52,6 +52,7 @@ Revision 0.3.0, released XX-XX-2021
 - Add RFC5544 providing the TimeStampedData Content Type
 - Add RFC5055 providing Server-Based Certificate Validation Protocol (SCVP)
 - Add RFC5276 providing SCVP updates to convey Long-Term Evidence Records
+- Modified RFC4055 to include PKCS#1 v1.5 algorithm identifiers
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
